# VelocityDispersion

./: .gitignore  CMakeLists.txt  README.md  SigmaLib.py  SigmaNumeric.pkl  SigmaNumeric2.py  VelocityDispersion.cbp  desmond.cpp  desmond.h  integration.cpp  integration.h  main.cpp  main.h  utillity.cpp  utillity.h
Testing/: CMakeLists.txt  TestModule  TestSigmaNumeric.ipynb  Testing.cpp  Verification.ipynb  VerificationWIMF.ipynb  test1.cpp  testing_integration.cpp  testing_integration.h  testing_utillity.cpp  testing_utillity.h  testinteg.cpp  testinteg.h  testmain.cpp  testutil.cpp  testutil.h
Testing/Python/: .VelocityDispersionLibrary.py.swp  DM Profile Testing.ipynb  Disk Test.ipynb  Faber-Jackson.ipynb  Interface Testing.ipynb  Library Testing.ipynb  MANGa Test BT.ipynb  MANGa Test.ipynb  MamonLokasComparison.ipynb  Mamon_Lokas_second_attempt.ipynb  Mass Test.ipynb  Real_Data_Comparison.ipynb  VelocityDispersionLibrary.py  deNicolaData.csv  sigma(r).ipynb
data/: HaloProperties.pro  cM_planck18.txt
lib/: .external.cpp.swp  CMakeCache.txt  CMakeLists.txt  Grid.npy  GridGenerator.py  GridVelocityDispersion.py  Interface Testing.ipynb  Library Testing.ipynb  Makefile  Real_Data_Comparison.ipynb  VelocityDispersionLibrary.py  cmake_install.cmake  deNicolaData.csv  external.cpp  sigma(r).ipynb
lib/.ipynb_checkpoints/: Interface Testing-checkpoint.ipynb  Library Testing-checkpoint.ipynb  Real_Data_Comparison-checkpoint.ipynb  VelocityDispersionLibrary-checkpoint.py
modelling/: DraftModel.ipynb
src/: .desmond.cpp.swp  .galaxy.cpp.swp  .galaxy.h.swp  .integration.cpp.swp  .integration.h.swp  .main.cpp.swp  .main.h.swp  CMakeLists.txt  DirectExecution  blackhole.cpp  blackhole.h  bulge.cpp  bulge.h  dark_matter.cpp  dark_matter.h  desmond.cpp  desmond.h  disk.cpp  disk.h  galaxy.cpp  galaxy.h  halo.cpp  halo.h  integration.cpp  integration.h  main.cpp  main.h  sigmalib.cpp  sigmalib.h  utillity.cpp  utillity.h
src/Legacy/: galaxy.cpp  galaxy.h  galaxyOLD.cpp  galaxyOLD.h
